--- a/Wide coverage/styles2.css
+++ b/Wide coverage/styles2.css
@@ -13,7 +13,7 @@ font-family:"Poppins" , sans-serif;
 }
 
 header{
-    margin: 47px 0 208px 42px;
+    margin: 47px 0 20px 42px;
 
 }
 
@@ -41,6 +41,7 @@ section{
     display: inline-block;
     margin-left: 85px;
      width: 493px;
+     
 }
 h1{
     width: 582px;
@@ -66,4 +67,31 @@ p{
     font-size: 18px;
     font-weight: 500;
     letter-spacing: 1px;
+}
+@media screen and (max-width:900px){
+
+    *{margin: 0;
+        box-sizing: border-box;
+    }
+    
+    
+    header{
+    display:none;
+
+}
+
+section{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+
+}
+.image-logo{
+    margin:0 50px;
+    
+  
+}
+
 }
